# tree-format

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
tree_format/: __init__.py  _text.py
tree_format/tests/: test_text.py
