[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-format"
version = "0.1.2"
authors = [{name = "Jonathan M. Lange", email = "jml@mumak.net"}]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
urls = {Homepage = "http://github.com/jml/tree-format"}

[project.optional-dependencies]
dev = ["pytest>=2.7.1", "testtools>=1.8.0"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}
